add 100% translations and changed banner img

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -40,8 +40,8 @@
     <string name="err_automobile_plate_number">Entrez le numéro de plaque automobile</string>
     <string name="logout">Deconnecter</string>
     <string name="preferences_switch_title">Kinyarwanda</string>
-    <string name="preferences_switch_en_title">Anglais</string>
-    <string name="preferences_switch_fr_title">Francais</string>
+    <string name="preferences_switch_en_title">" Anglais"</string>
+    <string name="preferences_switch_fr_title">Français</string>
     <string name="names">Noms</string>
     <string name="location">Location</string>
     <string name="idnumber">Numéro d\'identification</string>
@@ -63,6 +63,35 @@
     <string name="device_name">Nom de l\'Util</string>
     <string name="language">Langage</string>
     <string name="preferences_category_one">Langages</string>
-    <string name="logging_in_message">connexion...</string>
-    <string name="select_item">choisir  object</string>
+    <string name="logging_in_message">Se connecter...</string>
+    <string name="select_item">Sélectionnez un élément</string>
+    <string name="preferences_switch_summ">Basculer pour activer le kinyarwanda</string>
+    <string name="preferences_switch_en_summ">" Basculer pour activer l'anglais"</string>
+    <string name="preferences_switch_fr_summ">" Basculer pour activer le français"</string>
+    <string name="preferences_edittext_title">Préférence EditText</string>
+    <string name="preferences_edittext_summ" translatable="false">Résumé de EditText</string>
+    <string name="preferences_edittext_default">Valeur par défaut</string>
+    <string name="preferences_edittext_message">Message de dialogue</string>
+    <string name="preferences_checkbox_title">Préférence CheckBox</string>
+    <string name="preferences_checkbox_summ">CheckBox Résumé</string>
+    <string name="creadential_required">Entrez les informations d\'identification!</string>
+    <string name="password_match">Le mot de passe doit correspondre au mot de passe redéfini</string>
+    <string name="enter_your_details">Entrez vos coordonnées!</string>
+    <string name="create_new_account">Création d\'un nouveau compte ...</string>
+    <string name="user_register_success_message">Utilisateur enregistré avec succès.</string>
+    <string name="user_register_fail_message">L\'enregistrement de l\'utilisateur a échoué.</string>
+    <string name="report_lost_automobile">Signaler l\'automobile perdue ...</string>
+    <string name="report_found_automobile">Signaler l\'automobile trouvée ...</string>
+    <string name="report_lost_item">Rapports d\'objets perdus ...</string>
+    <string name="report_found_item">Signaler l\'article trouvé ...</string>
+    <string name="auth_failed">Authentification échouée.</string>
+    <string name="change_profile">change de profil</string>
+    <string name="profile">Profil</string>
+    <string name="report_lost">Rapport le perdu</string>
+    <string name="view_losted">Voir le perdu</string>
+    <string name="profile_update_message">Profil mis à jour avec succès</string>
+    <string name="validation_failed">validation échouée</string>
+    <string name="title_activity_notification">NotificationActivité</string>
+    <string name="report_found_message_success">Élément fondé signalé succès</string>
+    <string name="report_lost_message_success">Élément perdu signalé avec succès</string>
 </resources>
