--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,4 +129,5 @@
     <string name="title_activity_notification">NotificationActivity</string>
     <string name="report_found_message_success">founded item reported successful</string>
     <string name="report_lost_message_success">lost item reported successful</string>
+    <string name="app_banner">App banner</string>
 </resources>
