--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,4 @@
 <resources>
-    <string name="app_name">LostAndFound</string>
-    <string name="action_settings">Settings</string>
-    <string name="hint_username">Enter Username</string>
-    <string name="hint_password">Enter Password</string>
-    <string name="btn_login">Login</string>
-    <string name="btn_link_to_register">Are You registered? click to register</string>
-    <string name="btn_link_to_login">Already registered? click to login</string>
-    <string name="btn_register">Register</string>
-    <string name="hint_re_password">Re-Type Password</string>
-    <string name="hint_email">Enter Email</string>
-    <string name="hint_name">Enter Names</string>
-    <string name="hint_phone">Enter Phonenumber</string>
-    <string name="hint_location">Enter Address</string>
-    <string name="todo">TODO</string>
-    <string name="logging_in_message">Logging in...</string>
     <string-array name="enteries">
         <item>choose</item>
         <item>male</item>
@@ -32,10 +17,44 @@
         <item>Camera</item>
         <item>Other</item>
     </string-array>
+    <string-array name="Languages">
+        <item>English</item>
+        <item>Kinyarwanda</item>
+        <item>French</item>
+    </string-array>
+    <string-array name="LanguagesValues">
+        <item>en</item>
+        <item>rw</item>
+        <item>fr</item>
+    </string-array>
+    <!--end of languages-->
+    <!--array of cards-->
+    <string-array name="cardstypes">
+        <item>ID Card</item>
+        <item>Driving License</item>
+        <item>Student Card</item>
+    </string-array>
+    <!--end of cards array-->
+    <string name="app_name">LostAndFound</string>
+    <string name="action_settings">Settings</string>
+    <string name="hint_username">Enter Username</string>
+    <string name="hint_password">Enter Password</string>
+    <string name="btn_login">Login</string>
+    <string name="btn_link_to_register">Are You registered? click to register</string>
+    <string name="btn_link_to_login">Already registered? click to login</string>
+    <string name="btn_register">Register</string>
+    <string name="hint_re_password">Re-Type Password</string>
+    <string name="hint_email">Enter Email</string>
+    <string name="hint_name">Enter Names</string>
+    <string name="hint_phone">Enter Phonenumber</string>
+    <string name="hint_location">Enter Address</string>
+    <string name="todo">TODO</string>
+    <string name="logging_in_message">Logging in...</string>
     <string name="hello_lost_fragment">we are on lost fragment</string>
     <string name="hello_found_fragment">we are on found fragment</string>
     <string name="hint_owner_name">Enter Owner\'s Name</string>
-    <string name="hint_id_number">Enter Id Number</string>
+    <string name="hint_card_number">Enter Card Number</string>
+    <string name="hint_license_number">Enter License Number</string>
     <string name="hint_found_location">Enter Where You Found it</string>
     <string name="hint_lost_location">Enter Where You Losted it</string>
     <string name="btn_report_found">Report Founded Item</string>
@@ -69,22 +88,9 @@
     <string name="device_model_name">Device Model Name:</string>
     <string name="device_serial_number">Device SerialNumber:</string>
     <string name="title_activity_settings">Settings</string>
-
     <!--languages-->
     <string name="chooselang">Choose Language</string>
     <string name="language">Language</string>
-    <string-array name="Languages">
-        <item>English</item>
-        <item>Kinyarwanda</item>
-        <item>French</item>
-    </string-array>
-    <string-array name="LanguagesValues">
-        <item>en</item>
-        <item>rw</item>
-        <item>fr</item>
-    </string-array>
-    <!--end of languages-->
-
     <!--string related to settings-->
     <string name="preferences_category_one">Languages</string>
 
@@ -129,4 +135,12 @@
     <string name="report_found_message_success">founded item reported successful</string>
     <string name="report_lost_message_success">lost item reported successful</string>
     <string name="app_banner">App banner</string>
+    <string name="hint_id_number">Enter Id Number</string>
+    <string name="select_picture">Select Picture</string>
+    <string name="uploading">Uploading</string>
+    <string name="uploaded">Uploaded</string>
+    <string name="automobile_found_success">found automobile reported successful</string>
+    <string name="automobile_found_error">automobile found report failed</string>
+    <string name="automobile_lost_success">lost automobile reported successful</string>
+    <string name="automobile_lost_error">automobile lost report error</string>
 </resources>
